--- a/site/index.html
+++ b/site/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Mathathon</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/synergys.png" />
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="banner" id="h">
       <div class="row">
         <div
@@ -167,7 +168,8 @@
         minHeight: 200.0,
         minWidth: 200.0,
         scale: 1.0,
-        scaleMobile: 1.0
+        scaleMobile: 1.0,
+        color: 0x2b89c2
       });
     </script>
 
